fix: remove bad smell